<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary"
    tools:context=".DashboardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview0"
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="15dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_pie_chart"
                android:fontFamily="@font/poppins_semibold"
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:textColor="@color/dark_blue"/>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart"
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_marginTop="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@color/yellow"
                android:padding="2dp"
                android:layout_marginTop="65dp"
                android:layout_marginLeft="195dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:layout_marginLeft="215dp"
                android:text="Rp 124.120 Milyar"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:layout_marginLeft="215dp"
                android:layout_marginRight="10dp"
                android:text="Bantuan Keluarga Harapan"
                android:textSize="10sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/grey"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@color/teal_700"
                android:padding="2dp"
                android:layout_marginTop="115dp"
                android:layout_marginLeft="195dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="105dp"
                android:layout_marginLeft="215dp"
                android:text="Rp 82.843 Milyar"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="125dp"
                android:layout_marginLeft="215dp"
                android:layout_marginRight="10dp"
                android:text="Bantuan Pangan Non Tunai"
                android:textSize="10sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/grey"/>

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@color/dark_blue"
                android:padding="2dp"
                android:layout_marginTop="165dp"
                android:layout_marginLeft="195dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="155dp"
                android:layout_marginLeft="215dp"
                android:text="Rp 43.253 Milyar"
                android:textSize="12sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="215dp"
                android:layout_marginTop="175dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/poppins_medium"
                android:text="Bantuan Langsung Tunai"
                android:textColor="@color/grey"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

        <include
            android:id="@+id/cardView1"
            layout="@layout/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardview0" />

        <TextView
            android:id="@+id/title1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_chart"
            android:fontFamily="@font/poppins_semibold"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/judul_chart1"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/cardView1"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            app:cardCornerRadius="15dp"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/title1"
            tools:ignore="MissingConstraints,UnusedAttribute">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:background="@drawable/bg_spinner" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="15dp"
                android:background="@color/white"
                tools:ignore="MissingConstraints" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_chart"
            android:fontFamily="@font/poppins_semibold"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/judul_chart2"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/cardview"
            tools:ignore="MissingConstraints"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview2"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@+id/title2"
            tools:ignore="MissingConstraints,UnusedAttribute">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:textColor ="@color/white"
                android:layout_margin="10dp"
                android:background="@drawable/bg_spinner" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="15dp"
                android:background="@color/white"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>